# acoustic_isotropic_operators

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml  spec-file.txt
acoustic_iso_lib/: '  1  CMakeLists.txt  sponge.m
acoustic_iso_lib/acoustic_iso_double/: .nfs0000000021798aec00000dfc  .nfs0000000022cb5cfb00000dac  CMakeLists.txt
acoustic_iso_lib/acoustic_iso_double/include/: BornExtGpu.h  BornExtShotsGpu.h  BornExtShotsGpuFunctions.h  BornGpu.h  BornShotsGpu.h  BornShotsGpuFunctions.h  deviceGpu.h  fdParam.h  interpSpline.h  interpSplineLinear.h  interpTimeLinTbb.h  nonlinearPropGpu.h  nonlinearPropShotsGpu.h  nonlinearShotsGpuFunctions.h  operator.h  secondTimeDerivative.h  seismicOperator2D.cpp  seismicOperator2D.h  tomoExtGpu.h  tomoExtShotsGpu.h  tomoExtShotsGpuFunctions.h  varDeclare.h  wemvaExtGpu.h  wemvaExtShotsGpu.h  wemvaExtShotsGpuFunctions.h
acoustic_iso_lib/acoustic_iso_double/src/: BornExtGpu.cpp  BornExtShotsDoubleGpuMain.cpp  BornExtShotsGpu.cpp  BornExtShotsGpuFunctions.cu  BornExtShotsGpuMain.cpp  BornGpu.cpp  BornShotsDoubleGpuMain.cpp  BornShotsGpu.cpp  BornShotsGpuFunctions.cu  BornShotsGpuMain.cpp  deviceGpu.cpp  fdParam.cpp  interpSplineLinear.cpp  interpTimeLinTbb.cpp  kernelsGpu.cu  nonlinearPropGpu.cpp  nonlinearPropShotsDoubleGpuMain.cpp  nonlinearPropShotsGpu.cpp  nonlinearPropShotsGpuMain.cpp  nonlinearShotsGpuFunctions.cu  padFileDoubleGpuMain.cpp  padFileGpuMain.cpp  secondTimeDerivative.cpp  timeInteg.cpp  tomoExtGpu.cpp  tomoExtShotsDoubleGpuMain.cpp  tomoExtShotsGpu.cpp  tomoExtShotsGpuFunctions.cu  tomoExtShotsGpuMain.cpp  wemvaExtGpu.cpp  wemvaExtShotsDoubleGpuMain.cpp  wemvaExtShotsGpu.cpp  wemvaExtShotsGpuFunctions.cu  wemvaExtShotsGpuMain.cpp
acoustic_iso_lib/acoustic_iso_float/: CMakeLists.txt
acoustic_iso_lib/acoustic_iso_float/include/: BornExtGpu.h  BornExtShotsGpu.h  BornExtShotsGpuFunctions.h  BornGpu.h  BornShotsGpu.h  BornShotsGpuFunctions.h  deviceGpu.h  fdParam.h  interpSpline.h  interpSplineLinear.h  interpTimeLinTbb.h  nonlinearPropGpu.h  nonlinearPropShotsGpu.h  nonlinearShotsGpuFunctions.h  secondTimeDerivative.h  seismicOperator2D.cpp  seismicOperator2D.h  tomoExtGpu.h  tomoExtShotsGpu.h  tomoExtShotsGpuFunctions.h  varDeclare.h  wemvaExtGpu.h  wemvaExtShotsGpu.h  wemvaExtShotsGpuFunctions.h
acoustic_iso_lib/acoustic_iso_float/src/: BornExtGpu.cpp  BornExtShotsGpu.cpp  BornExtShotsGpuFunctions.cu  BornExtShotsGpuMain.cpp  BornGpu.cpp  BornShotsGpu.cpp  BornShotsGpuFunctions.cu  BornShotsGpuMain.cpp  deviceGpu.cpp  fdParam.cpp  interpSplineLinear.cpp  interpTimeLinTbb.cpp  kernelsGpu.cu  nonlinearPropGpu.cpp  nonlinearPropShotsGpu.cpp  nonlinearPropShotsGpuMain.cpp  nonlinearShotsGpuFunctions.cu  padFileGpuMain.cpp  secondTimeDerivative.cpp  timeInteg.cpp  tomoExtGpu.cpp  tomoExtShotsGpu.cpp  tomoExtShotsGpuFunctions.cu  tomoExtShotsGpuMain.cpp  wemvaExtGpu.cpp  wemvaExtShotsGpu.cpp  wemvaExtShotsGpuFunctions.cu  wemvaExtShotsGpuMain.cpp
acoustic_iso_lib/acoustic_iso_we_float/: CMakeLists.txt
acoustic_iso_lib/acoustic_iso_we_float/include/: .varDeclareWaveEquation.h.swo  AbsorbingBoundaryCondition.h  AbsorbingBoundaryConditionV2.h  AbsorbingDeriv.h  AbsorbingDerivV2.h  AcousticNonlinearModeling.h  AcousticProp.h  AcousticPropABC.h  BoundaryCondition.h  C2.h  C2_2DCube.h  C4.h  C4R_2DCube.h  C4_2DCube.h  C5.h  C5_2DCube.h  C6.h  C6_2DCube.h  CausalMask.h  G.h  GF.h  G_2DCube.h  Gradio.h  Gradio_multi_exp.h  Gradio_multi_exp_freq.h  HelmABC.h  InterpRec.h  InterpSource.h  Laplacian2d.h  Laplacian2dFast.h  Mask2d.h  Mask3d.h  Mask4d.h  PadModel2d.h  PadModel3d.h  PadRec.h  PadSource.h  Propagate.h  PropagateAcoustic.h  PropagateStepper.h  (+38 more)
acoustic_iso_lib/acoustic_iso_we_float/src/: .kernelsGpuWaveEquationAcoustic.cu.swp  AbsorbingBoundaryCondition.cpp  AbsorbingBoundaryConditionV2.cpp  AbsorbingDeriv.cpp  AbsorbingDerivV2.cpp  AcousticNonlinearModeling.cpp  AcousticProp.cpp  AcousticPropABC.cpp  BoundaryCondition.cpp  C2.cpp  C2_2DCube.cpp  C4.cpp  C4R_2DCube.cpp  C4_2DCube.cpp  C5.cpp  C5_2DCube.cpp  C6.cpp  C6_2DCube.cpp  CausalMask.cpp  G.cpp  GF.cpp  G_2DCube.cpp  Gradio.cpp  Gradio_multi_exp.cpp  Gradio_multi_exp_freq.cpp  HelmABC.cpp  InterpRec.cpp  InterpSource.cpp  Laplacian2d.cpp  Laplacian2dFast.cpp  Mask2d.cpp  Mask3d.cpp  Mask4d.cpp  PadModel2d.cpp  PadModel3d.cpp  PadRec.cpp  PadSource.cpp  PropagateAcoustic.cpp  PropagateStepper.cpp  PropagateStepperAcoustic.cpp  (+36 more)
acoustic_iso_lib/notebooks/: Born Offset Extended .ipynb  Born data inversion.ipynb  Born.ipynb  BornExtInversionTest.ipynb  Born_data_inversion.ipnb  FWI Example.ipynb  FWI Template.ipynb  LSRTM Template.ipynb  Nonlinear.ipynb  Tomo.ipynb  nonlineartest.ipynb  parFWI.p  parNonlinear.p  parPythonTest.p  parTomoExt.p  velocityMarmousi.H  velocityMarmousi.H@
acoustic_iso_lib/notebooks/.ipynb_checkpoints/: nonlineartest-checkpoint.ipynb
acoustic_iso_lib/notebooks/results/: FWI_logFile
acoustic_iso_lib/python/: Acoustic_iso_double.py  BornExtPythonDoubleMain.py  BornPythonDoubleMain.py  CMakeLists.txt  extLsrtmDoubleMain.py  fwiDoubleMain.py  lsrtmDoubleMain.py  nonlinearPythonDoubleMain.py  pyAcoustic_iso_double.cpp  pyAcoustic_iso_double1.cpp  pyAcoustic_iso_double2.cpp  pyAcoustic_iso_double3.cpp  pyAcoustic_iso_double_nl.cpp  pyAcoustic_iso_double_tomo.cpp  tomoExtPythonDoubleMain.py  wemvaDoubleMain.py  wemvaExtPythonDoubleMain.py
acoustic_iso_lib/python/python_double/: Acoustic_iso_double.py  BornExtPythonDoubleMain.py  BornPythonDoubleMain.py  CMakeLists.txt  Simple stepping rules.ipynb  nonlinearPythonDoubleMain.py  pyAcoustic_iso_double_born.cpp  pyAcoustic_iso_double_born_ext.cpp  pyAcoustic_iso_double_nl.cpp  pyAcoustic_iso_double_wemva.cpp  test_selfadjoint.py  tomoExtPythonDoubleMain.py  wemvaExtPythonDoubleMain.py
acoustic_iso_lib/python/python_float/: Acoustic_iso_float.py  Acoustic_iso_float_we.py  BornExtPythonFloatMain.py  BornPythonFloatMain.py  CMakeLists.txt  SymesExtLsrtmMain.py  SymesPseudoInvMain.py  dataDisplayMain.py  extLsrtmMain.py  fwiMain.py  (+23 more)
acoustic_iso_lib/seis_utils/: CMakeLists.txt
(+190 files in other folders)
